--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 
 <body>
   <div id="all-contents">
-   
-  </div>
-<div style = "position:absolute; right:310px; bottom:353px; font-size: 35px">
+
+<div style = "position:absolute; right:917.5px; bottom:353px; font-size: 35px">
    <nav>
   <ul>
       <li>
@@ -29,31 +28,31 @@
 <main>
     <!-- Sidebar section -->
 
-<div style = "position:absolute; right:750px; top:200px; width: 70%; height: 200%;">
-  <img src=https://media.nga.gov/iiif/3a68434e-0571-476c-a3de-fe278149633e/full/!588,600/0/default.jpg>
+<div class = "sidebar" style = "position:absolute; right:750px; top:200px; width: 70%; height: 200%;">
+  <img class="siderbar-img" src=https://media.nga.gov/iiif/3a68434e-0571-476c-a3de-fe278149633e/full/!588,600/0/default.jpg>
 </div>
 
 
 <!-- Content section -->
 
-<div style = "position:absolute; left:750px; bottom:775px; font-size: 55px;
+<div class="content" style = "position:absolute; left:750px; bottom:775px; font-size: 55px;
 background: rgb(239, 133, 41);border-radius: 8px;background-size: 400px 500px">
   Amr Mohieldin
 </div>
 
-<div style = "position:absolute; left:720px; bottom:740px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
+<div style = "position:absolute; left:735px; bottom:740px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
   Student at Haynes Academy
 </div>
 
 <!-- Interests section -->
-<div1 style = "position:absolute; right:474px; bottom:252.5px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
+<div id="Interests" style = "position:absolute; right:400px; bottom: 500px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
   <h3>Interests</h3>
-  <ul>
-      <li>Playing Sports</li>
-      <li>Playing Videos games</li>
-      <li>Chess</li>
+  <ul id="nav-ul">
+      <li class="nav-li">Playing Sports</li>
+      <li class="nav-li"> Playing Videos games</li>
+      <li class="nav-li"> Chess</li>
   </ul>   
-</div1>
+</div>
 
 </main>
 
