--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="all-contents">
 
-<div style = "position:absolute; right:917.5px; bottom:353px; font-size: 35px">
+<div style = "position:absolute; right:585px; bottom:400.5px; font-size: 35px">
    <nav>
   <ul>
       <li>
@@ -25,37 +25,32 @@
 </nav>
 
 
+
 <main>
     <!-- Sidebar section -->
-
 <div class = "sidebar" style = "position:absolute; right:750px; top:200px; width: 70%; height: 200%;">
   <img class="siderbar-img" src=https://media.nga.gov/iiif/3a68434e-0571-476c-a3de-fe278149633e/full/!588,600/0/default.jpg>
 </div>
 
-
-<!-- Content section -->
-
-<div class="content" style = "position:absolute; left:750px; bottom:775px; font-size: 55px;
+<h2 class="content" style = "position:absolute; left:750px; bottom:755px; font-size: 55px;
 background: rgb(239, 133, 41);border-radius: 8px;background-size: 400px 500px">
   Amr Mohieldin
-</div>
+</h2>
 
-<div style = "position:absolute; left:735px; bottom:740px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
-  Student at Haynes Academy
-</div>
+<p style = "position:absolute; left:735px; bottom:700px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
+  Student at Haynes Academy </p>
 
 <!-- Interests section -->
-<div id="Interests" style = "position:absolute; right:400px; bottom: 500px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
+<div id="Interests" style = "position:absolute; right:750px; bottom: 300px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
   <h3>Interests</h3>
   <ul id="nav-ul">
-      <li class="nav-li">Playing Sports</li>
-      <li class="nav-li"> Playing Videos games</li>
-      <li class="nav-li"> Chess</li>
+      <li >Playing Sports</li>
+      <li > Playing Videos games</li>
+      <li > Chess</li>
   </ul>   
 </div>
 
 </main>
-
 </div>
 
 </body>
