--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
   <div id="all-contents">
 
-<div style = "position:absolute; right:585px; bottom:400.5px; font-size: 35px">
-   <nav>
+<nav style = "position:absolute; right:585px; bottom:400.5px; font-size: 35px"> 
   <ul>
       <li>
         <a href="index.html"> Home </a>
@@ -21,7 +20,6 @@
         <a href="portfolio.html"> Portfolio </a>
       </li>
   </ul>
-</div>
 </nav>
 
 
