--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 <nav style = "position:absolute; right:585px; bottom:400.5px; font-size: 35px"> 
   <ul>
-      <li>
-        <a href="index.html"> Home </a>
+      <li class="nav-li">
+         <a href="index.html"> Home </a>
       </li>
-      <li>
+      <li class="nav-li">
         <a href="portfolio.html"> Portfolio </a>
       </li>
   </ul>
@@ -42,9 +42,9 @@ background: rgb(239, 133, 41);border-radius: 8px;background-size: 400px 500px">
 <div id="Interests" style = "position:absolute; right:750px; bottom: 300px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
   <h3>Interests</h3>
   <ul id="nav-ul">
-      <li >Playing Sports</li>
-      <li > Playing Videos games</li>
-      <li > Chess</li>
+      <li>Playing Sports</li>
+      <li> Playing Videos games</li>
+      <li> Chess</li>
   </ul>   
 </div>
 
