--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="all-contents">
 
 <nav style = "position:absolute; right:585px; bottom:400.5px; font-size: 35px"> 
-  <ul>
+  <ul id="nav-ul">
       <li class="nav-li">
          <a href="index.html"> Home </a>
       </li>
@@ -30,24 +30,25 @@
   <img class="siderbar-img" src=https://media.nga.gov/iiif/3a68434e-0571-476c-a3de-fe278149633e/full/!588,600/0/default.jpg>
 </div>
 
-<h2 class="content" style = "position:absolute; left:750px; bottom:755px; font-size: 55px;
+<div class="content">
+<h2 style="position:absolute; left:750px; bottom:755px; font-size: 55px;
 background: rgb(239, 133, 41);border-radius: 8px;background-size: 400px 500px">
   Amr Mohieldin
 </h2>
 
-<p style = "position:absolute; left:735px; bottom:700px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
+<p style = "position:absolute; left:735px; bottom:670px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
   Student at Haynes Academy </p>
 
 <!-- Interests section -->
-<div id="Interests" style = "position:absolute; right:750px; bottom: 300px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
+<div id="interests" style = "position:absolute; right:750px; bottom: 300px; font-size: 35px;background: rgb(239, 133, 41);border-radius: 8px;">
   <h3>Interests</h3>
-  <ul id="nav-ul">
+  <ul>
       <li>Playing Sports</li>
       <li> Playing Videos games</li>
       <li> Chess</li>
   </ul>   
 </div>
-
+</div>
 </main>
 </div>
 
