--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-    Amr's Portfolio
-    </head>
+    <title>Amr's Portfolio </title>
+    <link rel="stylesheet" href="style.css">
+</head>
 
     <body>
         <div id="all-contents">
             <nav>
-                <h1>Sheba's Glorious Website</h1>
+                <h1>Amr's Awesome Portfolio</h1>
                 <ul id="nav-ul">
                    <li class="nav-li">
                    <a class="nav-a" href="index.html">Home</a>
@@ -17,6 +18,16 @@
                  </li>
              </ul>
          </nav>
-     </div>
+         <main>
+            <div class="content">
+                <h1>Portfolio</h1>
+                <ul id="portfolio">
+                    <li><a href="projects/platformer/">Platformer : A cannon - dodging, collectible - grabbing adventure game for Halleb0t</a></li>
+                    <li><a href="projects/bouncing-box/">Bouncing Box : A project that gives you a taste of game development on the web </a></li>
+                    <li><a href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...</a></li>
+                </ul>
+            </div>
+        </main>
+        </div>
     </body>
 </html>
