--- a/asd-projects/walker/index.html
+++ b/asd-projects/walker/index.html
@@ -10,9 +10,11 @@
     <script src="index.js"></script>
   </head>
   
+  <!-- The board and box --> 
   <body>
     <div id='board'>
-      <div id='gameItem'></div>
+      <div id='walker'></div>
+      <div id='walker'></div>
     </div>
   </body>
 </html>
