--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -12,7 +12,21 @@
   
   <body>
     <div id='board'>
-      <div id='gameItem'></div>
+      <div id='ball'></div>
+      <div id='paddle1'></div>
+      <div id='paddle2'></div>
+      <div id="score1">
+        <ul>
+          <li>Score: 0</li>
+  
+      </ul>
+      </div>
+      <div id="score2">
+        <ul>
+          <li>Score: 0</li>
+      </ul>
+      </div>
+      <div id="line"></div>
     </div>
   </body>
 </html>
