--- a/asd-projects/pong/index.html
+++ b/asd-projects/pong/index.html
@@ -16,17 +16,15 @@
       <div id='paddle1'></div>
       <div id='paddle2'></div>
       <div id="score1">
-        <ul>
           <li>Score: 0</li>
-  
-      </ul>
       </div>
       <div id="score2">
-        <ul>
           <li>Score: 0</li>
-      </ul>
       </div>
       <div id="line"></div>
+      <div id="winner">
+          <p> The winner is </p>
+      </div>
     </div>
   </body>
 </html>
